# c-simple-template-demo

./: CMakeLists.txt
app/: main.c
include/template_demo/: library.h
src/: CMakeLists.txt  library.c
tests/: CMakeLists.txt  test_template_demo.cpp
